{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "2c2ae0f8-0562-4a49-9085-7619a271d7f9",
            "actions": [
                {
                    "name": "Stand",
                    "type": "Value",
                    "id": "88d56d9c-16ce-4c71-80c4-186b326d56ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2)",
                    "initialStateCheck": true
                },
                {
                    "name": "Action",
                    "type": "Button",
                    "id": "d62a4b78-af91-4074-970b-49d271409f05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "840775bb-4073-4f0b-854d-e7fd363bf7c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TogglePrimaryWeapon",
                    "type": "Button",
                    "id": "bf466cd3-9540-4aab-b719-14b4a0779d5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleSecondaryWeapon",
                    "type": "Button",
                    "id": "19363835-b809-40ba-89b0-f02ddb57823b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aa5b6feb-5f0e-47d8-b094-156598a0a90c",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af948381-68de-4aad-8fec-4618b3e5dca2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eaa0afc6-8cf5-4ab7-addc-4c1ed2780c30",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "947fcab0-affe-4fc7-afa3-b615f487ada3",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TogglePrimaryWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "620b7bb4-ac33-463f-adc3-d7a3225c3db7",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleSecondaryWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}